// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Panels) Panel renders component activity status when pending 1`] = `
.c0 {
  width: 100%;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,.1),0 1px 1px 0 rgba(0,0,0,.1),0 0 1px -4px rgba(0,0,0,.2);
}

<div
  className="c0"
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    isExpanded={true}
    minHeight={false}
    noPadding={false}
  >
    <DotActivity
      centered={true}
      primary={false}
      size={2}
      visible={true}
    />
  </WithTheme(Content)>
</div>
`;

exports[`(Panels) Panel renders component with basic props 1`] = `
.c0 {
  width: 100%;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,.1),0 1px 1px 0 rgba(0,0,0,.1),0 0 1px -4px rgba(0,0,0,.2);
}

<div
  className="c0"
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    isExpanded={true}
    minHeight={false}
    noPadding={false}
  />
</div>
`;

exports[`(Panels) Panel renders component with children 1`] = `
.c0 {
  width: 100%;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,.1),0 1px 1px 0 rgba(0,0,0,.1),0 0 1px -4px rgba(0,0,0,.2);
}

<div
  className="c0"
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    isExpanded={true}
    minHeight={false}
    noPadding={false}
  >
    <span>
      this is a test
    </span>
  </WithTheme(Content)>
</div>
`;

exports[`(Panels) Panel renders component with minHeight prop 1`] = `
.c0 {
  width: 100%;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,.1),0 1px 1px 0 rgba(0,0,0,.1),0 0 1px -4px rgba(0,0,0,.2);
}

<div
  className="c0"
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    isExpanded={true}
    minHeight="10em"
    noPadding={false}
  />
</div>
`;

exports[`(Panels) Panel renders component with noPadding prop 1`] = `
.c0 {
  width: 100%;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,.1),0 1px 1px 0 rgba(0,0,0,.1),0 0 1px -4px rgba(0,0,0,.2);
}

<div
  className="c0"
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    isExpanded={true}
    minHeight={false}
    noPadding={true}
  />
</div>
`;
